Learning-docker/step-2-setup/terraform/ecs.tf
resource "aws_ecs_cluster" "default" {
    name = "${var.ecs_cluster_name}"
}

resource "aws_ecs_task_definition" "hello-world-nginx" {
    family = "wp-ecs-task-tf"
    container_definitions = "${template_file.wp-container.rendered}"
}

resource "aws_ecs_service" "wp-ecs-svc" {
    name = "wp-ecs-svc-tf"
    cluster = "${aws_ecs_cluster.default.id}"
    task_definition = "${aws_ecs_task_definition.hello-world-nginx.arn}"
    desired_count = 1

    iam_role = "ecsServiceRole"

    load_balancer {
        elb_name = "${aws_elb.default.id}"
        container_name = "hello-world-nginx"
        container_port = 80
    }
}
